--- a/Services/Order/Core/Ecommerce.Order.Application/Ecommerce.Order.Application.csproj
+++ b/Services/Order/Core/Ecommerce.Order.Application/Ecommerce.Order.Application.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Mediator\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ECommerce.Order.Domain\ECommerce.Order.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
