--- a/Services/Order/Infrastructure/ECommerce.Order.Persistence/ECommerce.Order.Persistence.csproj
+++ b/Services/Order/Infrastructure/ECommerce.Order.Persistence/ECommerce.Order.Persistence.csproj
@@ -6,4 +6,22 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.31" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.31">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.31" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.31">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Ecommerce.Order.Application\Ecommerce.Order.Application.csproj" />
+    <ProjectReference Include="..\..\Core\ECommerce.Order.Domain\ECommerce.Order.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
