--- a/Services/Order/Core/Ecommerce.Order.Application/Ecommerce.Order.Application.csproj
+++ b/Services/Order/Core/Ecommerce.Order.Application/Ecommerce.Order.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Mediator\" />
+    <PackageReference Include="MediatR" Version="12.3.0" />
   </ItemGroup>
 
   <ItemGroup>
