--- a/IdentityServer/ECommerce.IdentityServer/appsettings.json
+++ b/IdentityServer/ECommerce.IdentityServer/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "DefaultConnection": "Server=localhost,1433;Database=ECommerceIdentityDb;User=sa;Password=123456aA*"
   }
 }
