--- a/Services/Discount/ECommerce.Discount/appsettings.json
+++ b/Services/Discount/ECommerce.Discount/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-7G5LBG3\\SQLSERVERBG;database=ECommerceDiscountDb;integrated security=true;MultipleActiveResultSets=true"
-  }
+  },
+  "IdentityServerUrl": "http://localhost:5001"
 }
