entities and context have been prepared for cargo service

--- a/Services/Cargo/ECommerce.Cargo.WebApi/ECommerce.Cargo.WebApi.csproj
+++ b/Services/Cargo/ECommerce.Cargo.WebApi/ECommerce.Cargo.WebApi.csproj
@@ -23,4 +23,11 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ECommerce.Cargo.Business\ECommerce.Cargo.Business.csproj" />
+    <ProjectReference Include="..\ECommerce.Cargo.DataAccess\ECommerce.Cargo.DataAccess.csproj" />
+    <ProjectReference Include="..\ECommerce.Cargo.DtoLayer\ECommerce.Cargo.DtoLayer.csproj" />
+    <ProjectReference Include="..\ECommerce.Cargo.Entity\ECommerce.Cargo.Entity.csproj" />
+  </ItemGroup>
+
 </Project>
