--- a/Services/Cargo/ECommerce.Cargo.DataAccess/ECommerce.Cargo.DataAccess.csproj
+++ b/Services/Cargo/ECommerce.Cargo.DataAccess/ECommerce.Cargo.DataAccess.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ECommerce.Cargo.Entity\ECommerce.Cargo.Entity.csproj" />
+  </ItemGroup>
+
 </Project>
