services were written for cargo microservice

--- a/Services/Cargo/ECommerce.Cargo.Business/ECommerce.Cargo.Business.csproj
+++ b/Services/Cargo/ECommerce.Cargo.Business/ECommerce.Cargo.Business.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ECommerce.Cargo.DataAccess\ECommerce.Cargo.DataAccess.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+    <Folder Include="ValidationRules\" />
+  </ItemGroup>
+
 </Project>
