--- a/Services/Basket/ECommerce.Basket/appsettings.json
+++ b/Services/Basket/ECommerce.Basket/appsettings.json
@@ -6,5 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "IdentityServerUrl": "http://localhost:5001"
+  "IdentityServerUrl": "http://localhost:5001",
+  "RedisSettings": {
+    "Host": "localhost",
+    "Port": 6379
+  }
 }
