--- a/Frontends/ECommerce.WebUI/ECommerce.WebUI.csproj
+++ b/Frontends/ECommerce.WebUI/ECommerce.WebUI.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Services\Catalog\ECommerce.Catalog\ECommerce.Catalog.csproj" />
+  </ItemGroup>
+
 </Project>
